--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -42,6 +42,7 @@
                 </div>
                 <div class="overlay"></div>
 
+
                 {{!-- month calendar --}}
 
 
@@ -73,21 +74,27 @@
             </div>
         </div>
         <div class="col-9">
-            <div class="container right">
-                <div class="today-date">
-                    <div class="event-day"></div>
-                    <div class="event-date"></div>
-                </div>
-                <div class="events">
-                    {{#each events}}
-                    <div class="event">
-                        <div class="vertical-line-icon"></div>
-                        <div class="title">
-                            <h3 class="event-title">{{this.title}}</h3>
-                            <div class="event-time">{{this.time}}</div>
-                        </div>
+            <div class="right">
+                <div class="week-calendar">
+                    <div class="weekdays">
+                        <div>Mon</div>
+                        <div>Tue</div>
+                        <div>Wed</div>
+                        <div>Thu</div>
+                        <div>Fri</div>
+                        <div class="weekend">Sat</div>
+                        <div class="weekend">Sun</div>
                     </div>
-                    {{/each}}
+                    <div class="days"></div>
+                    <div class="events">
+                        <div class="event"></div>
+                        <div class="event"></div>
+                        <div class="event"></div>
+                        <div class="event"></div>
+                        <div class="event"></div>
+                        <div class="event"></div>
+                        <div class="event"></div>
+                    </div>
                 </div>
             </div>
         </div>
