--- a/Calendy/src/public/css/style.css
+++ b/Calendy/src/public/css/style.css
@@ -227,123 +227,58 @@ body {
           color: var(--gray-text-color); }
 
 .right {
-  margin-top: 20px;
-  position: relative;
-  background-image: white;
+  background-color: white;
   min-height: 100vh;
-  border-left: 3px solid var(--border-white); }
-  .right .today-date {
-    width: 100%;
-    height: 50px;
+  margin-top: 20px; }
+  .right .week-calendar {
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    padding-left: 20px;
-    text-transform: capitalize; }
-    .right .today-date .event-day {
-      font-size: 2rem;
-      font-weight: 500;
-      color: black; }
-    .right .today-date .event-date {
-      font-size: 1rem;
-      font-weight: 400;
-      color: var(--gray-text-color); }
-  .right .events {
-    width: 100%;
-    height: 100%;
-    max-height: 600px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    padding-left: 4px; }
-    .right .events .event {
-      position: relative;
-      width: 95%;
-      min-height: 70px;
+    flex-direction: column; }
+    .right .week-calendar .weekdays {
       display: flex;
-      align-items: center;
-      justify-content: left;
       flex-direction: row;
-      gap: 5px;
-      padding: 0 20px;
-      color: var(--gray-text-color);
-      border-radius: 20px;
-      cursor: pointer;
-      background-color: white;
-      margin-bottom: 10px; }
-      .right .events .event .vertical-line-icon {
-        width: 5px;
-        height: 50px;
-        background-color: var(--my-cyan);
-        border-radius: 50px; }
-      .right .events .event .title {
+      justify-content: space-between; }
+      .right .week-calendar .weekdays div {
+        width: 14.285%;
+        height: 40px;
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        pointer-events: none; }
-        .right .events .event .title .event-title {
-          font-size: 1rem;
-          font-weight: 400;
-          padding-left: 20px; }
-        .right .events .event .title .event-time {
-          font-size: 0.8rem;
-          font-weight: 400;
-          color: var(--gray-text-color);
-          pointer-events: none; }
-      .right .events .event::after {
-        content: "☑️";
-        position: absolute;
-        top: 50%;
-        right: 0;
-        font-size: 2.5rem;
-        font-weight: 300;
-        line-height: 1;
-        display: none;
         align-items: center;
         justify-content: center;
-        opacity: 0.5;
-        transform: translateY(-50%); }
-      .right .events .event:hover {
-        color: white;
-        background: linear-gradient(to left, #64F2F4, #92BFFA); }
-        .right .events .event:hover .event-time {
-          color: white; }
-        .right .events .event:hover .vertical-line-icon {
-          background-color: white; }
-        .right .events .event:hover::after {
-          display: flex; }
-    .right .events .no-event {
-      width: 100%;
-      height: 100%;
+        font-size: 1.5rem;
+        font-weight: 500;
+        text-transform: capitalize; }
+      .right .week-calendar .weekdays .weekend {
+        color: red; }
+    .right .week-calendar .days {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.5rem;
-      font-weight: 500;
-      color: black; }
-  .right .add-event {
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    color: var(--my-cyan);
-    border: 5px solid var(--my-cyan);
-    border-radius: 50%;
-    background-color: transparent;
-    cursor: pointer; }
-    .right .add-event i {
-      pointer-events: none; }
-    .right .add-event:hover {
-      width: 60px;
-      height: 60px;
-      font-size: 1.8rem;
-      bottom: 25px;
-      right: 25px; }
+      flex-direction: row;
+      justify-content: space-between; }
+      .right .week-calendar .days .day {
+        width: 14.285%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
+        color: var(--my-cyan);
+        margin: auto; }
+      .right .week-calendar .days .active {
+        background-image: var(--gradient-cyan);
+        color: white;
+        font-size: 2.5rem;
+        border-bottom: 3px solid var(--border-white);
+        border-radius: 5px; }
+    .right .week-calendar .events {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between; }
+      .right .week-calendar .events .event {
+        width: 14.285%;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
+        color: var(--my-cyan);
+        border-left: 3px solid var(--border-white);
+        border-top: 3px solid var(--border-white); }
+        .right .week-calendar .events .event:first-child {
+          border-left: 0; }
