new color aplied

--- a/Calendy/src/public/css/style.css
+++ b/Calendy/src/public/css/style.css
@@ -1,13 +1,5 @@
-@charset "UTF-8";
-:root {
-  --my-cyan: #51C4F0;
-  --gradient-cyan: linear-gradient(to right, #64F2F4, #92BFFA);
-  --my-whitesmoke: #F6F7FA;
-  --border-white: #E6E9EF;
-  --gray-text-color: #878895; }
-
 body {
-  background-color: #E8E8EB; }
+  background-image: linear-gradient(to bottom right, #EAE7F1, #E1F3FE); }
 
 .left {
   margin-top: 20px;
@@ -32,7 +24,7 @@ body {
     max-height: 0px;
     overflow: hidden;
     border-radius: 20px;
-    background-color: white;
+    background-color: #fff;
     top: 0;
     left: 0;
     z-index: 2;
@@ -44,8 +36,8 @@ body {
       align-items: center;
       justify-content: space-between;
       padding: 0 20px;
-      color: #373c4f;
-      border-bottom: 1px solid #f5f5f5; }
+      color: #22CCEE;
+      border-bottom: 1px solid #EFEFEF; }
       .left .add-event-wrapper .add-event-header .title {
         font-size: 1.2rem;
         font-weight: 500; }
@@ -83,12 +75,12 @@ body {
           .left .add-event-wrapper .add-event-body .add-event-input input:focus {
             border-bottom: 1px solid var(--my-cyan); }
             .left .add-event-wrapper .add-event-body .add-event-input input:focus::placeholder {
-              color: var(--my-cyan); }
+              color: #22CCEE; }
     .left .add-event-wrapper .add-event-footer {
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: white;
+      background-color: #fff;
       padding-bottom: 10px; }
       .left .add-event-wrapper .add-event-footer .add-event-btn {
         height: 40px;
@@ -96,16 +88,15 @@ body {
         font-weight: 500;
         outline: none;
         border: none;
-        color: var(--my-cyan);
+        color: #22CCEE;
         background-color: transparent;
         border-radius: 20px;
         cursor: pointer;
         padding: 0 10px;
-        border: 3px solid var(--my-cyan);
+        border: 3px solid #22CCEE;
         text-align: right; }
         .left .add-event-wrapper .add-event-footer .add-event-btn:hover {
-          background-image: var(--gradient-cyan);
-          color: white;
+          background-color: #CFF8FE;
           border: 0; }
   .left .overlay {
     position: fixed;
@@ -122,7 +113,7 @@ body {
     margin-top: 20px;
     border-radius: 40px;
     padding: 0 20px;
-    background-color: white; }
+    background-color: #fff; }
     .left .calendar-main .calendar {
       position: relative;
       width: 100%;
@@ -131,7 +122,7 @@ body {
       flex-direction: column;
       flex-wrap: wrap;
       justify-content: space-between;
-      color: var(--gray-text-color);
+      color: #000;
       border-radius: 5px;
       background-color: transparent; }
       .left .calendar-main .calendar .month {
@@ -154,7 +145,7 @@ body {
           .left .calendar-main .calendar .month .prev:hover,
           .left .calendar-main .calendar .month .next:hover,
           .left .calendar-main .calendar .month .date:hover {
-            color: var(--my-cyan); }
+            color: #22CCEE; }
         .left .calendar-main .calendar .month .goToDate {
           position: absolute;
           top: auto;
@@ -167,11 +158,11 @@ body {
           .left .calendar-main .calendar .month .goToDate .inputDate {
             width: 150px;
             font-weight: 500;
-            border: 3px solid var(--border-white); }
+            border: 3px solid #EFEFEF; }
           .left .calendar-main .calendar .month .goToDate .goToButton {
-            background-image: var(--gradient-cyan);
-            color: white;
-            border: 3px solid var(--border-white);
+            background-color: #CFF8FE;
+            color: #22CCEE;
+            border: 3px solid #EFEFEF;
             border-left: 0;
             font-size: 0.8rem;
             display: flex;
@@ -199,32 +190,31 @@ body {
           color: red; }
       .left .calendar-main .calendar .days {
         width: 100%;
-        display: grid;
-        grid-template-columns: repeat(7, 1fr);
-        /* Tạo 7 cột với chiều rộng bằng nhau */
-        gap: 5px;
-        font-size: 12px;
+        font-size: 100%;
         font-weight: 500;
-        margin-bottom: 20px; }
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap; }
         .left .calendar-main .calendar .days .day {
-          width: 24px;
-          height: 24px;
+          width: 14.285%;
           display: flex;
           align-items: center;
           justify-content: center;
           cursor: pointer;
-          color: var(--my-cyan); }
+          color: #22CCEE;
+          margin-bottom: 5px; }
           .left .calendar-main .calendar .days .day:not(.prev-month):not(.active):not(.next-month):hover {
             background-color: #f1f3f4;
             border-radius: 50%; }
         .left .calendar-main .calendar .days .active {
           position: relative;
-          color: white;
-          background-image: var(--gradient-cyan);
+          color: #22CCEE;
+          background-color: #CFF8FE;
           border-radius: 15px; }
         .left .calendar-main .calendar .days .prev-month,
         .left .calendar-main .calendar .days .next-month {
-          color: var(--gray-text-color); }
+          color: #878895; }
 
 .right {
   background-color: white;
@@ -258,13 +248,13 @@ body {
         align-items: center;
         justify-content: center;
         font-size: 2rem;
-        color: var(--my-cyan);
+        color: #22CCEE;
         margin: auto; }
       .right .week-calendar .days .active {
-        background-image: var(--gradient-cyan);
-        color: white;
+        background-color: #CFF8FE;
+        color: #22CCEE;
         font-size: 2.5rem;
-        border-bottom: 3px solid var(--border-white);
+        border-bottom: 3px solid #EFEFEF;
         border-radius: 5px; }
     .right .week-calendar .events {
       display: flex;
@@ -278,7 +268,7 @@ body {
         justify-content: center;
         font-size: 2rem;
         color: var(--my-cyan);
-        border-left: 3px solid var(--border-white);
-        border-top: 3px solid var(--border-white); }
+        border-left: 3px solid #EFEFEF;
+        border-top: 3px solid #EFEFEF; }
         .right .week-calendar .events .event:first-child {
           border-left: 0; }
