--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -26,13 +26,13 @@
                     </div>
                     <div class="add-event-body">
                         <div class="add-event-input">
-                            <input type="text" placeholder="Event Name" class="event-name" />
+                            <input type="text" placeholder="Event Name" class="event-name" name="title"/>
                         </div>
                         <div class="add-event-input">
-                            <input type="text" placeholder="Event Time From" class="event-time-from" />
+                            <input type="text" placeholder="Event Time From" class="event-time-from" name="start_date"/>
                         </div>
                         <div class="add-event-input">
-                            <input type="text" placeholder="Event Time To" class="event-time-to" />
+                            <input type="text" placeholder="Event Time To" class="event-time-to" name="end_date"/>
                         </div>
                     </div>
                     <div class="add-event-footer">
