them tinh nang hien thi event va them event moi

--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -86,14 +86,7 @@
                         <div class="weekend">Sun</div>
                     </div>
                     <div class="days"></div>
-                    <div class="events">
-                        <div class="event"></div>
-                        <div class="event"></div>
-                        <div class="event"></div>
-                        <div class="event"></div>
-                        <div class="event"></div>
-                        <div class="event"></div>
-                        <div class="event"></div>
+                    <div class="events_container">
                     </div>
                 </div>
             </div>
