--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -1,4 +1,4 @@
-$bodyBackground: linear-gradient(to bottom right, #EAE7F1 , #E1F3FE );
+$bodyBackground: linear-gradient(to bottom right, #EAE7F1, #E1F3FE);
 $containerBackground: #fff;
 $textBackground: #CFF8FE;
 $textColor1: #000;
@@ -267,24 +267,38 @@ body {
 
                 .day {
                     width: 14.285%;
+                    height: 0;
+                    // ky thuat Aspect Ratio de cho width = height
+                    padding-top: 14.285%;   
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     cursor: pointer;
                     color: $textColor2;
                     margin-bottom: 5px;
+                    position: relative;
 
                     &:not(.prev-month):not(.active):not(.next-month):hover {
-                        background-color: #f1f3f4;
+                        background-color: #eee;
                         border-radius: 50%;
+                    }
+
+                    div {
+                        position: absolute;
+                        top: 0;
+                        bottom: 0;
+                        left: 0;
+                        right: 0;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
                     }
                 }
 
                 .active {
-                    position: relative;
                     color: $textColor2;
                     background-color: $textBackground;
-                    border-radius: 15px;
+                    border-radius: 50%;
                 }
 
                 .prev-month,
@@ -324,6 +338,7 @@ body {
                 text-transform: capitalize;
 
             }
+
             .weekend {
                 color: red;
             }
@@ -344,30 +359,39 @@ body {
                 margin: auto;
             }
 
-            .active { 
+            .active {
                 color: $textColor2;
                 font-size: 2.5rem;
-                border-bottom: 3px solid $boderColor;   
+                border-bottom: 3px solid $boderColor;
                 border-radius: 5px;
             }
         }
 
-        .events {
+        .events_container {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
 
-            .event {
+            .events {
                 width: 14.285%;
                 min-height: 100vh;
                 display: flex;
                 align-items: center;
-                justify-content: center;
                 font-size: 2rem;
                 color: var(--my-cyan);
                 border-left: 3px solid $boderColor;
                 border-top: 3px solid $boderColor;
-                
+                flex-direction: column;
+
+                .event {
+                    background-color: $textColor2;
+                    color: white;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
                 &:first-child {
                     border-left: 0;
                 }
