--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -34,6 +34,9 @@
                         <div class="add-event-input">
                             <input type="text" placeholder="Event Time To" class="event-time-to" name="end_date"/>
                         </div>
+                        <div class="add-event-input">
+                            <input type="text" placeholder="Description" class="description" name="description"/>
+                        </div>
                     </div>
                     <div class="add-event-footer">
                         <button class="add-event-btn">Add Event</button>
