--- a/Calendy/src/public/css/style.css
+++ b/Calendy/src/public/css/style.css
@@ -46,7 +46,9 @@ body {
   align-items: center; }
 
 .beside-logo {
-  margin-left: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -55,15 +57,18 @@ body {
   display: flex; }
 
 .current-state {
-  margin-left: 30px;
-  padding: 8px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  height : 51px;
+  padding: 6px;
   border: 1px solid;
   border-radius: 5px;
   border-color: #dadce0;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 600;
   cursor: pointer; }
 
@@ -108,6 +113,66 @@ body {
   /* Di chuyển sang trái 55% */
   transform: translate(-50%, -50%) rotate(-45deg);
   /* Di chuyển ngược lại 50% và xoay 135 độ */ }
+.next-state {
+    color: #5f6368;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    border-radius: 50%;
+    position: relative;
+    transition: background-color 0.3s;
+    /* Hiệu ứng chuyển đổi màu nền */ }
+.next-state:hover {
+  background-color: #f0f0f0; }
+.next-state::before {
+    content: "";
+    /* Cần content để pseudo-element hoạt động */
+    width: 10px;
+    /* Độ rộng của dấu mũi tên */
+    height: 10px;
+    /* Chiều cao của dấu mũi tên */
+    border-top: 2px solid #5f6368;
+    /* Đường viền trắng cho dấu mũi tên */
+    border-left: 2px solid #5f6368;
+    /* Đường viền trắng cho dấu mũi tên */
+    position: absolute;
+    /* Thiết lập phần tử là absolute */
+    top: 50%;
+    /* Đẩy lên phía trên 50% */
+    left: 45%;
+    /* Di chuyển sang trái 45% */
+    transform: translate(-50%, -50%) rotate(135deg);
+
+}
+
+
+.detail-items {
+  display: flex; }
+
+.login-button {
+  width: 70px;
+  height: 50px;
+  margin-left: auto;
+  border: 1px solid;
+  border-radius: 5px;
+  border-color: #dadce0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.login-button:hover {
+  background-color: #fff; }
+
+
+
+
+
 
 .left {
   margin-top: 20px;
@@ -216,7 +281,7 @@ body {
     background-color: rgba(0, 0, 0, 0.3);
     visibility: hidden; }
   .left .active {
-    max-height: 300px; }
+    max-height: 350px; }
   .left .calendar-main {
     margin-top: 20px;
     border-radius: 40px;
