--- a/Calendy/src/resources/views/partials/header.hbs
+++ b/Calendy/src/resources/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="first-part">
         <button class="menu-header">
-            <img class="menu-header-img" src="https://png2.cleanpng.com/sh/334ff21812241d43a7a1a8d7c26b2be3/L0KzQYm3V8E1N6dmR91yc4Pzfri0iPFuaqZ3f9d7LXL4hMX2jr1kd551jeZucj3sc7F1k71ubZ96RdZ4b4LwcbA0VfI1QZc5S6UCNEHoSIq1V8M6O2UATao6NUO0RYi6Usk6PGg6TpD5bne=/kisspng-hamburger-button-computer-icons-menu-doorman-5b49f433741e89.7393495815315732994756.png" />
+            <img class="menu-header-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1200px-Hamburger_icon.svg.png" />
         </button>
            
         <div class="beside-menu">
@@ -13,21 +13,23 @@
     <div class="detail-items">
         <div class="state">
             <div class="current-state">
-                Hôm nay
+                Today
             </div>
             </div>
 
             <div class="change-state">
                 <span>
                     <i class=" prev-state"></i>
-                    <i class="fas fa-angle-right next-state"></i>
+                    <i class="next-state"></i>
                 </span>
             </div>
 
             <div class="title-state"></div>
         </div>
-        <div></div>
-        <div></div>
+        <div class="avt"></div>
+        <!-- Thêm nút đăng nhập ở đây -->
+        <div class="login-button">
+            <button class="login-button">Login</button>
+        </div>
     </div>
-    <div class="avt"></div>
 </header>
