--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -10,6 +10,10 @@ body {
     background-image: $bodyBackground;
 }
 
+// .container-fluid {
+//     max-width: 1200px;
+// }
+
 .left {
     margin-top: 20px;
     position: relative;
@@ -140,6 +144,11 @@ body {
                 }
             }
         }
+    }
+
+    .edit-event-wrapper {
+        position: absolute;
+        visibility: hidden;
     }
 
     .overlay {
@@ -390,6 +399,8 @@ body {
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    cursor: pointer;
+                    margin-bottom: 5px;
                 }
 
                 &:first-child {
