--- a/Calendy/src/public/css/style.css
+++ b/Calendy/src/public/css/style.css
@@ -98,6 +98,9 @@ body {
         .left .add-event-wrapper .add-event-footer .add-event-btn:hover {
           background-color: #CFF8FE;
           border: 0; }
+  .left .edit-event-wrapper {
+    position: absolute;
+    visibility: hidden; }
   .left .overlay {
     position: fixed;
     top: 0;
@@ -286,6 +289,8 @@ body {
           width: 100%;
           display: flex;
           justify-content: center;
-          align-items: center; }
+          align-items: center;
+          cursor: pointer;
+          margin-bottom: 5px; }
         .right .week-calendar .events_container .events:first-child {
           border-left: 0; }
